# agentlens

./: .gitignore  CLAUDE.md  CNAME  README.md  agentlens.py  demo.html  index.html  pyproject.toml
.github/workflows/: ci.yml
agentlens_engine/: __init__.py  classifier.py  clustering.py  diagnose.py  evaluate.py  fixes.py  hallucination.py  preprocess.py  similarity.py  timeline.py
agentlens_sdk/: __init__.py  collector.py  langgraph.py  pricing.py
agentlens_sdk_ts/: package.json  tsconfig.json
agentlens_sdk_ts/src/: index.ts
demo/: terminal_recording.md
docs/: beta_onboarding_script.md  beta_test_checklist.md  live_provider_validation.md  manual_beta_process.md  new_failure_patterns.md  onboarding_failures.md  phase3_review.md  trust_failures.md
engine/: analyze.py  classifier.py  diagnose.py  evaluate.py  preprocess.py
examples/: anthropic_broken_agent.py  broken_agent.py  openai_broken_agent.py  phase2_failure_cases.py  shared_tools.py
feedback/: outreach.csv  users.csv
launch/: discord_post.md  dm_template.md  hn_post.md  reddit_post.md  twitter_post.md
real_world_cases/: CASE_TEMPLATE.md  README.md
real_world_cases/crewai_tool_selection/: actual_diagnosis.txt  expected_diagnosis.json  notes.md  trace.json
real_world_cases/langgraph_tool_selection/: actual_diagnosis.txt  expected_diagnosis.json  notes.md  trace.json
sdk/: __init__.py  collector.py
tests/: broken_agent.py  real_trace.json  sample_trace.json  test_beta_safety.py
tests/phase2_runs/: phase2_cascade.json  phase2_context_pollution.json  phase2_loop.json  phase2_overflow.json  phase2_state_drift.json  phase2_tool_selection.json
