[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentlens"
version = "0.1.0"
description = "Local trace capture for debugging failed AI agent runs."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "AgentLens" }
]
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.0.0"]

[project.scripts]
agentlens = "agentlens:main"

[tool.setuptools]
py-modules = ["agentlens"]
packages = ["agentlens_engine", "agentlens_sdk"]
