[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentlens-ai"
version = "0.1.0"
description = "When your AI agent breaks, AgentLens tells you exactly which decision caused it — and what to change."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  { name = "AgentLens", email = "hello@agentlens.run" }
]
keywords = ["ai", "agents", "observability", "debugging", "llm", "tracing", "anthropic", "openai", "langgraph"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Debuggers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://agentlens.run"
Repository = "https://github.com/abishekgiri/agentlens"
Documentation = "https://github.com/abishekgiri/agentlens#readme"
"Bug Tracker" = "https://github.com/abishekgiri/agentlens/issues"

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.0.0"]

[project.scripts]
agentlens = "agentlens:main"

[tool.setuptools]
py-modules = ["agentlens"]
packages = ["agentlens_engine", "agentlens_sdk"]
